# inkternity

./: CMakeLists.txt  README.md
docs/: MANUAL.md
src/: AvatarStore.cpp  AvatarStore.hpp  BrushCustomizationDrawer.cpp  BrushCustomizationDrawer.hpp  ClientData.cpp  ClientData.hpp  SavedPresetsDrawer.cpp  SavedPresetsDrawer.hpp  Toolbar.cpp  Toolbar.hpp  World.cpp
src/Brushes/: BrushPresets.cpp  BrushPresets.hpp  MyPaintBrushParams.cpp  MyPaintBrushParams.hpp  UserBrushPresets.cpp  UserBrushPresets.hpp
src/DrawingProgram/: DrawingProgram.cpp  ToolConfiguration.hpp
src/DrawingProgram/Layers/: DrawingProgramLayerManager.cpp
src/DrawingProgram/Tools/: BrushTool.cpp  DrawingProgramToolBase.cpp  DrawingProgramToolBase.hpp  MyPaintBrushTool.cpp  MyPaintBrushTool.hpp  SquareCanvasCaptureTool.cpp  SquareCanvasCaptureTool.hpp
src/GUIStuff/Elements/: MemoryImageDisplay.cpp  MemoryImageDisplay.hpp  NumberSlider.hpp
src/Screens/: DesktopDrawingProgramScreen.cpp  FileSelectScreen.cpp
